--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             const auth = document.getElementById('apiAuth').value;
 
             // Create GitHub Issue URL with pre-filled Markdown
-            const repoUrl = "https://github.com/inirey/API-COLLECTION";
+            const repoUrl = "https://github.com/vihanga-yt/Api-HUB";
             const issueTitle = encodeURIComponent(`Add New API: ${name}`);
             
             const issueBody = encodeURIComponent(`### New API Submission
